# parallel_computations_lab2

./: .gitignore  CMakeLists.txt  README.md  bfs.cpp  bfs.h  generateGraph.cpp  mainBFS.cpp  sequentialBFS.cpp  sequentialBFS.h  vertex.h
